--- a/index.html
+++ b/index.html
@@ -400,6 +400,25 @@
 		</div>
 	</div>
 
+	<script src="./plugins/validator/validator.js"></script>
+	<script>
+		const valid = new Validator({
+			selector: '#form2',
+			pattern: {},
+			method: {
+				'phone': [
+					['notEmpty'],
+					['pattern', 'phone']
+				],
+				'email': [
+					['notEmpty'],
+					['pattern', 'email']
+				]
+			}
+		})
+
+		valid.init();
+	</script>
 	<script src="scripts/script.js"></script>
 </body>
 
