Собираем проект используя Webpack

--- a/index.html
+++ b/index.html
@@ -400,7 +400,8 @@
 		</div>
 	</div>
 
-	<script src="scripts/script.js"></script>
+	<script src="./dist/dev-bundle.js"></script>
+	<!-- <script src="src/index.js" type="module"></script> -->
 </body>
 
 </html>
