--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
 					<div class="companies-hor-item"><img src="images/companies/companies-7.png" alt=""></div>
 					<div class="companies-hor-item"><img src="images/companies/companies-8.png" alt=""></div>
 				</div>
+				<!-- <button id='left'></button>
+				<button id='right'></button> -->
 			</div>
 		</div>
 	</div>
@@ -402,6 +404,7 @@
 
 	<script src="./dist/bundle.js"></script>
 	<!-- <script src="src/index.js" type="module"></script> -->
+
 </body>
 
 </html>
