--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 				<div class="row justify-content-center">
 					<button class="btn form-btn" type="submit">Оставить заявку!</button>
 				</div>
+				<div class="sk-rotating-plane"></div>
 			</div>
 		</form>
 		<small>*Мы гарантируем конфидициальность передаваемых данных</small>
@@ -313,7 +314,7 @@
 						</div>
 
 						<div class="justify-content-center">
-							<div>
+							<div class="form2-btn">
 								<button class="btn form-btn" type="submit">Оставить заявку!</button>
 							</div>
 						</div>
